# aiGrunn-2023

./: .gitignore  README.md
annotation-service/: example.json  main.py  pyproject.toml
project/: README.md  project.yml
project/configs/: default.cfg
project/scripts/: gmb_converter.py
